--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-lazyload": "^3.2.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
   },
